--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -19,6 +19,8 @@ block container
 							h2 Easily Snipe At 
 								span Block-0
 							h1 ON SOLANA
+						.home-page-icon 
+							img(src="./images/bee-icon.png", alt="")
 						a(href="#!" class="home-banner-btn")  
 							i.ti.ti-viewfinder
 							p 
