--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -155,7 +155,9 @@ html {
 
 .main-header {
   background: #FCFDFE;
-  border-radius: 0px, 0px, 1px, 0px; }
+  border-radius: 0px, 0px, 1px, 0px;
+  position: relative;
+  z-index: 1; }
   @media only screen and (max-width: 1200px) {
     .main-header {
       height: 85px; } }
@@ -653,7 +655,7 @@ body.home-page .home-page-section {
       max-width: 100%;
       background-image: url("../images/home-page-bg-mobile.png");
       height: calc(100vh - 90px);
-      background-position: bottom;
+      background-position: 0px -150px;
       background-repeat: no-repeat;
       background-size: cover;
       position: relative; } }
@@ -672,7 +674,10 @@ body.home-page .home-page-section {
         -webkit-box-pack: end;
         -ms-flex-pack: end;
         justify-content: end;
-        padding-bottom: 70px; } }
+        padding-bottom: 50px;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; } }
     body.home-page .home-page-section .home-banner .home-banner-title {
       position: absolute;
       right: 100px;
@@ -702,6 +707,43 @@ body.home-page .home-page-section {
           body.home-page .home-page-section .home-banner .home-banner-title h1 {
             font-size: 35px;
             line-height: 46px; } }
+    body.home-page .home-page-section .home-banner .home-page-icon {
+      position: absolute;
+      right: 200px;
+      bottom: 200px;
+      text-align: right; }
+      body.home-page .home-page-section .home-banner .home-page-icon img {
+        -webkit-animation: 1s linear infinite fly-bee-icon;
+        animation: 1s linear infinite fly-bee-icon; }
+      @media only screen and (max-width: 1200px) {
+        body.home-page .home-page-section .home-banner .home-page-icon {
+          bottom: 0;
+          top: 100px;
+          right: 50%;
+          -webkit-transform: translateX(50%);
+          transform: translateX(50%); } }
+
+@-webkit-keyframes fly-bee-icon {
+  0% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); }
+  50% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px); }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); } }
+
+@keyframes fly-bee-icon {
+  0% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); }
+  50% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px); }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); } }
     body.home-page .home-page-section .home-banner .home-banner-btn {
       border: 12px solid rgba(194, 147, 251, 0.2);
       background-color: white;
