Update Price Page

--- a/app/views/blocks/navbar.pug
+++ b/app/views/blocks/navbar.pug
@@ -156,6 +156,13 @@
 				span.icon 
 					i.ti.ti-file-dots
 				| Docs
+				
+		//- Docs
+		li.navbar-item.dropdown
+			a.navbar-link(href="price.html")
+				span.icon 
+					i.ti.ti-file-dots
+				| Price
 
 
 	.menu-support 
