--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,6 +1,7 @@
 @import 'reset.scss';
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import "helpers/variables";
 @import "helpers/mixins";
 @import "helpers/functions";
@@ -722,6 +723,159 @@ body.home-page {
         line-height: 20px;
         color: var(--text-black);
         margin-bottom: 20px;
+    }
+
+    // Price Item page
+    .price-section {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+
+        .price-item {
+            border-radius: 5px 80px 5px 80px;
+            background-color: #f8f8f8;
+            padding: 20px 15px;
+            height: 100%;
+            font-family: "Inter", sans-serif;
+            .price-title {
+                text-align: center;
+                h3 {
+                    font-size: 30px;
+                    font-weight: 600;
+                }
+                p {
+                    margin-block: 15px 25px;
+                    color: #808080;
+                    font-size: 12px;
+                }
+            }
+
+            .price-main {
+                .price-value {
+                    display: flex;
+                    justify-content: center;
+                    gap: 5;
+                    img {
+                        flex-shrink: 0;
+                    }
+                    h1 {
+                        font-size: 100px;
+                        font-weight: 800;
+                    }
+                }
+                .price-month {
+                    text-align: center;
+                    color: #808080;
+                    font-size: 16px;
+                    margin-block: 15px 25px;
+                }
+            }
+
+            .price-desc {
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+                .price-desc-item {
+                    display: flex;
+                    gap: 15px;
+                    .line {
+                        border-radius: 10px;
+                        width: 20px;
+                        height: 8px;
+                        background-color: red;
+                        flex-shrink: 0;
+                        margin-top: 5px;
+                    }
+                    p {
+                        color: #3E4047;
+                        font-size: 14px;
+                        font-weight: 600;
+                        line-height: 16px;
+                    }
+                }
+            }
+
+            .btn-purchase {
+                margin-top: 50px;
+                margin-inline: auto;
+            }
+
+            &.combo-color-1 {
+                .price-title {
+                    h3 {
+                        background: linear-gradient(to left, #DC42FF, #4D79FF);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                }
+                .price-main {
+                    .price-value {
+                        h1 {
+                            background: linear-gradient(to top, #DC42FF, #4D79FF);
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
+                        }
+                    }
+                }
+                .price-desc {
+                    .price-desc-item {
+                        .line {
+                            background: linear-gradient(to left, #DC42FF, #4D79FF);
+                        }
+                    }
+                }
+            }
+            &.combo-color-2 {
+                .price-title {
+                    h3 {
+                        background: linear-gradient(to left, #EF26D1, #FF6F4F);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                }
+                .price-main {
+                    .price-value {
+                        h1 {
+                            background: linear-gradient(to top, #EF26D1, #FF6F4F);
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
+                        }
+                    }
+                }
+                .price-desc {
+                    .price-desc-item {
+                        .line {
+                            background: linear-gradient(to left, #EF26D1, #FF6F4F);
+                        }
+                    }
+                }
+            }
+            &.combo-color-3 {
+                .price-title {
+                    h3 {
+                        background: linear-gradient(to left, #3CE8A9, #2BA3FF);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                }
+                .price-main {
+                    .price-value {
+                        h1 {
+                            background: linear-gradient(to top, #3CE8A9, #2BA3FF);
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
+                        }
+                    }
+                }
+                .price-desc {
+                    .price-desc-item {
+                        .line {
+                            background: linear-gradient(to left, #3CE8A9, #2BA3FF);
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
