--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,6 +4,7 @@
 */
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 html,
 body,
 div,
@@ -854,6 +855,115 @@ body.home-page .home-page-section {
     line-height: 20px;
     color: var(--text-black);
     margin-bottom: 20px; }
+  .content-submit .price-section {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px; }
+    .content-submit .price-section .price-item {
+      border-radius: 5px 80px 5px 80px;
+      background-color: #f8f8f8;
+      padding: 20px 15px;
+      height: 100%;
+      font-family: "Inter", sans-serif; }
+      .content-submit .price-section .price-item .price-title {
+        text-align: center; }
+        .content-submit .price-section .price-item .price-title h3 {
+          font-size: 30px;
+          font-weight: 600; }
+        .content-submit .price-section .price-item .price-title p {
+          margin-block: 15px 25px;
+          color: #808080;
+          font-size: 12px; }
+      .content-submit .price-section .price-item .price-main .price-value {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        gap: 5; }
+        .content-submit .price-section .price-item .price-main .price-value img {
+          -ms-flex-negative: 0;
+          flex-shrink: 0; }
+        .content-submit .price-section .price-item .price-main .price-value h1 {
+          font-size: 100px;
+          font-weight: 800; }
+      .content-submit .price-section .price-item .price-main .price-month {
+        text-align: center;
+        color: #808080;
+        font-size: 16px;
+        margin-block: 15px 25px; }
+      .content-submit .price-section .price-item .price-desc {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        gap: 25px; }
+        .content-submit .price-section .price-item .price-desc .price-desc-item {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          gap: 15px; }
+          .content-submit .price-section .price-item .price-desc .price-desc-item .line {
+            border-radius: 10px;
+            width: 20px;
+            height: 8px;
+            background-color: red;
+            -ms-flex-negative: 0;
+            flex-shrink: 0;
+            margin-top: 5px; }
+          .content-submit .price-section .price-item .price-desc .price-desc-item p {
+            color: #3E4047;
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 16px; }
+      .content-submit .price-section .price-item .btn-purchase {
+        margin-top: 50px;
+        margin-inline: auto; }
+      .content-submit .price-section .price-item.combo-color-1 .price-title h3 {
+        background: -webkit-gradient(linear, right top, left top, from(#DC42FF), to(#4D79FF));
+        background: linear-gradient(to left, #DC42FF, #4D79FF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; }
+      .content-submit .price-section .price-item.combo-color-1 .price-main .price-value h1 {
+        background: -webkit-gradient(linear, left bottom, left top, from(#DC42FF), to(#4D79FF));
+        background: linear-gradient(to top, #DC42FF, #4D79FF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; }
+      .content-submit .price-section .price-item.combo-color-1 .price-desc .price-desc-item .line {
+        background: -webkit-gradient(linear, right top, left top, from(#DC42FF), to(#4D79FF));
+        background: linear-gradient(to left, #DC42FF, #4D79FF); }
+      .content-submit .price-section .price-item.combo-color-2 .price-title h3 {
+        background: -webkit-gradient(linear, right top, left top, from(#EF26D1), to(#FF6F4F));
+        background: linear-gradient(to left, #EF26D1, #FF6F4F);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; }
+      .content-submit .price-section .price-item.combo-color-2 .price-main .price-value h1 {
+        background: -webkit-gradient(linear, left bottom, left top, from(#EF26D1), to(#FF6F4F));
+        background: linear-gradient(to top, #EF26D1, #FF6F4F);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; }
+      .content-submit .price-section .price-item.combo-color-2 .price-desc .price-desc-item .line {
+        background: -webkit-gradient(linear, right top, left top, from(#EF26D1), to(#FF6F4F));
+        background: linear-gradient(to left, #EF26D1, #FF6F4F); }
+      .content-submit .price-section .price-item.combo-color-3 .price-title h3 {
+        background: -webkit-gradient(linear, right top, left top, from(#3CE8A9), to(#2BA3FF));
+        background: linear-gradient(to left, #3CE8A9, #2BA3FF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; }
+      .content-submit .price-section .price-item.combo-color-3 .price-main .price-value h1 {
+        background: -webkit-gradient(linear, left bottom, left top, from(#3CE8A9), to(#2BA3FF));
+        background: linear-gradient(to top, #3CE8A9, #2BA3FF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; }
+      .content-submit .price-section .price-item.combo-color-3 .price-desc .price-desc-item .line {
+        background: -webkit-gradient(linear, right top, left top, from(#3CE8A9), to(#2BA3FF));
+        background: linear-gradient(to left, #3CE8A9, #2BA3FF); }
 
 .right-section {
   background: #FCFDFE;
