--- a/app/views/price.pug
+++ b/app/views/price.pug
@@ -19,13 +19,16 @@ block container
 							.col-12
 								h6.content-submit-title Create Liquidity Pool 
 								p.content-submit-desc Use the default mode, the cost will be the lowest. Just fill in the contract token and then click "Create Openbook Market"
-								.price-section 
-									+price-item("combo-color-1")
-									+price-item("combo-color-2")
-									+price-item("combo-color-3")
-									+price-item("combo-color-1")
-									+price-item("combo-color-2")
-									+price-item("combo-color-3")
-									+price-item("combo-color-1")
-									+price-item("combo-color-2")
+								.price-swiper-slider-js
+									.price-section.swiper-wrapper 
+										+price-item("combo-color-1")
+										+price-item("combo-color-2")
+										+price-item("combo-color-3")
+										+price-item("combo-color-1")
+										+price-item("combo-color-2")
+										+price-item("combo-color-3")
+										+price-item("combo-color-1")
+										+price-item("combo-color-2")
+									.swiper-button-prev.swiper-navigation.btn-primary.swiper-price-prev
+									.swiper-button-next.swiper-navigation.btn-primary.swiper-price-next
 									
