--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -17,7 +17,7 @@ html(lang="en")
 		link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
 		link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css")
 		link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css")
-		link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
+		link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css")
 		link(rel="stylesheet", href="styles/styles.css")
 	body(class=bodyClass)
 		.page-wrapper
