Fix Icon Overide Menu

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -738,8 +738,8 @@ body.home-page {
             height: 35px;
             padding: 0;
             border-radius: 5px;
-            // border: 1px solid purple;
             position: absolute;
+            z-index: 1;
             &::after {
                 font-size: 15px;
             }
