Update text price

--- a/app/views/price.pug
+++ b/app/views/price.pug
@@ -20,15 +20,199 @@ block container
 								h6.content-submit-title Create Liquidity Pool 
 								p.content-submit-desc Use the default mode, the cost will be the lowest. Just fill in the contract token and then click "Create Openbook Market"
 								.price-swiper-slider-js
-									.price-section.swiper-wrapper 
-										+price-item("combo-color-1")
-										+price-item("combo-color-2")
-										+price-item("combo-color-3")
-										+price-item("combo-color-1")
-										+price-item("combo-color-2")
-										+price-item("combo-color-3")
-										+price-item("combo-color-1")
-										+price-item("combo-color-2")
+									.price-section.swiper-wrapper
+										.swiper-slide
+											.price-item(class="combo-color-1")
+												.price-title 	
+													h3 Basic 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 5
+													p.price-month 1 day
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Perfect for short-term needs and quick launches
+												button.btn-purchase.btn.btn-primary PURCHASE
+										.swiper-slide
+											.price-item(class="combo-color-2")
+												.price-title 	
+													h3 Swift 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 9
+													p.price-month 2 days
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Ideal for weekend projects or short campaigns
+												button.btn-purchase.btn.btn-primary PURCHASE
+										.swiper-slide
+											.price-item(class="combo-color-3")
+												.price-title 	
+													h3 Standard 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 20
+													p.price-month 5 days
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Ideal for weekend projects or short campaigns
+												button.btn-purchase.btn.btn-primary PURCHASE
+										.swiper-slide
+											.price-item(class="combo-color-1")
+												.price-title 	
+													h3 Pro 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 35
+													p.price-month 10 days
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Priority customer support
+													.price-desc-item 
+														span.line 
+														p Access to beta features and experimental tools
+												button.btn-purchase.btn.btn-primary PURCHASE
+										.swiper-slide
+											.price-item(class="combo-color-2")
+												.price-title 	
+													h3 Advanced 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 55
+													p.price-month 15 days
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Priority customer support
+													.price-desc-item 
+														span.line 
+														p Access to beta features and experimental tools
+													.price-desc-item 
+														span.line 
+														p Dedicated support agent for personalized assistance
+												button.btn-purchase.btn.btn-primary PURCHASE
+										.swiper-slide
+											.price-item(class="combo-color-3")
+												.price-title 	
+													h3 Premium 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 75
+													p.price-month 20 days
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Priority customer support
+													.price-desc-item 
+														span.line 
+														p Access to beta features and experimental tools
+													.price-desc-item 
+														span.line 
+														p Dedicated support agent for personalized assistance
+													.price-desc-item 
+														span.line 
+														p Early access to new features before public release
+												button.btn-purchase.btn.btn-primary PURCHASE
+										.swiper-slide
+											.price-item(class="combo-color-1")
+												.price-title 	
+													h3 Ultimate 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 95
+													p.price-month 25 days
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Priority customer support
+													.price-desc-item 
+														span.line 
+														p Access to beta features and experimental tools
+													.price-desc-item 
+														span.line 
+														p Dedicated support agent for personalized assistance
+													.price-desc-item 
+														span.line 
+														p Early access to new features before public release
+													.price-desc-item 
+														span.line 
+														p Monthly one-on-one consultation with BeeBee experts
+												button.btn-purchase.btn.btn-primary PURCHASE
+										.swiper-slide
+											.price-item(class="combo-color-2")
+												.price-title 	
+													h3 Elite 
+													p 
+												.price-main
+													.price-value 
+														img(src="./images/solona-price-icon.png", width="30" height="30")
+														h1 110
+													p.price-month 30 days
+												.price-desc 
+													.price-desc-item 
+														span.line 
+														p Full access to all current BeeBee services
+													.price-desc-item 
+														span.line 
+														p Priority customer support
+													.price-desc-item 
+														span.line 
+														p Access to beta features and experimental tools
+													.price-desc-item 
+														span.line 
+														p Dedicated support agent for personalized assistance
+													.price-desc-item 
+														span.line 
+														p Early access to new features before public release
+													.price-desc-item 
+														span.line 
+														p Monthly one-on-one consultation with BeeBee experts
+													.price-desc-item 
+														span.line 
+														p Exclusive webinars and training sessions
+													.price-desc-item 
+														span.line 
+														p VIP community access for networking with top developers
+												button.btn-purchase.btn.btn-primary PURCHASE
 									.swiper-button-prev.swiper-navigation.btn-primary.swiper-price-prev
 									.swiper-button-next.swiper-navigation.btn-primary.swiper-price-next
 									
