--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -768,13 +768,14 @@ body.home-page {
             border-radius: 5px 80px 5px 80px;
             background-color: #f2f2f2;
             padding: 20px 15px;
-            // height: 100%;
+            height: 100%;
             font-family: "Inter", sans-serif;
             .price-title {
                 text-align: center;
                 h3 {
                     font-size: 30px;
                     font-weight: 600;
+                    margin-bottom: 25px;
                 }
                 p {
                     margin-block: 15px 25px;
