--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -891,12 +891,14 @@ body.home-page .home-page-section {
     border-radius: 5px 80px 5px 80px;
     background-color: #f2f2f2;
     padding: 20px 15px;
+    height: 100%;
     font-family: "Inter", sans-serif; }
     .content-submit .price-section .price-item .price-title {
       text-align: center; }
       .content-submit .price-section .price-item .price-title h3 {
         font-size: 30px;
-        font-weight: 600; }
+        font-weight: 600;
+        margin-bottom: 25px; }
       .content-submit .price-section .price-item .price-title p {
         margin-block: 15px 25px;
         color: #808080;
