Update price items

--- a/app/views/price.pug
+++ b/app/views/price.pug
@@ -34,11 +34,11 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Perfect for short-term needs and quick launches
-												button.btn-purchase.btn.btn-primary PURCHASE
+														p 24/7 technical support
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-2")
 												.price-title 	
@@ -56,7 +56,7 @@ block container
 													.price-desc-item 
 														span.line 
 														p Ideal for weekend projects or short campaigns
-												button.btn-purchase.btn.btn-primary PURCHASE
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-3")
 												.price-title 	
@@ -74,7 +74,7 @@ block container
 													.price-desc-item 
 														span.line 
 														p Ideal for weekend projects or short campaigns
-												button.btn-purchase.btn.btn-primary PURCHASE
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-1")
 												.price-title 	
@@ -95,7 +95,7 @@ block container
 													.price-desc-item 
 														span.line 
 														p Access to beta features and experimental tools
-												button.btn-purchase.btn.btn-primary PURCHASE
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-2")
 												.price-title 	
@@ -119,7 +119,7 @@ block container
 													.price-desc-item 
 														span.line 
 														p Dedicated support agent for personalized assistance
-												button.btn-purchase.btn.btn-primary PURCHASE
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-3")
 												.price-title 	
@@ -146,7 +146,7 @@ block container
 													.price-desc-item 
 														span.line 
 														p Early access to new features before public release
-												button.btn-purchase.btn.btn-primary PURCHASE
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-1")
 												.price-title 	
@@ -176,7 +176,7 @@ block container
 													.price-desc-item 
 														span.line 
 														p Monthly one-on-one consultation with BeeBee experts
-												button.btn-purchase.btn.btn-primary PURCHASE
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-2")
 												.price-title 	
@@ -212,7 +212,7 @@ block container
 													.price-desc-item 
 														span.line 
 														p VIP community access for networking with top developers
-												button.btn-purchase.btn.btn-primary PURCHASE
+												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 									.swiper-button-prev.swiper-navigation.btn-primary.swiper-price-prev
 									.swiper-button-next.swiper-navigation.btn-primary.swiper-price-next
 									
