--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -765,7 +765,7 @@ body.home-page {
         
 
         .price-item {
-            border-radius: 5px 80px 5px 80px;
+            border-radius: 5px 50px 5px 50px;
             background-color: #f2f2f2;
             padding: 20px 15px;
             height: 100%;
@@ -832,6 +832,7 @@ body.home-page {
             .btn-purchase {
                 margin-top: 50px;
                 margin-inline: auto;
+                width: max-content;
             }
 
             &.combo-color-1 {
