--- a/app/views/price.pug
+++ b/app/views/price.pug
@@ -52,10 +52,10 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Ideal for weekend projects or short campaigns
+														p 24/7 technical support
 												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-3")
@@ -70,10 +70,10 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Ideal for weekend projects or short campaigns
+														p 24/7 technical support
 												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-1")
@@ -88,13 +88,10 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Priority customer support
-													.price-desc-item 
-														span.line 
-														p Access to beta features and experimental tools
+														p 24/7 technical support
 												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-2")
@@ -109,16 +106,10 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Priority customer support
-													.price-desc-item 
-														span.line 
-														p Access to beta features and experimental tools
-													.price-desc-item 
-														span.line 
-														p Dedicated support agent for personalized assistance
+														p 24/7 technical support
 												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-3")
@@ -133,19 +124,10 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Priority customer support
-													.price-desc-item 
-														span.line 
-														p Access to beta features and experimental tools
-													.price-desc-item 
-														span.line 
-														p Dedicated support agent for personalized assistance
-													.price-desc-item 
-														span.line 
-														p Early access to new features before public release
+														p 24/7 technical support
 												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-1")
@@ -160,22 +142,10 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Priority customer support
-													.price-desc-item 
-														span.line 
-														p Access to beta features and experimental tools
-													.price-desc-item 
-														span.line 
-														p Dedicated support agent for personalized assistance
-													.price-desc-item 
-														span.line 
-														p Early access to new features before public release
-													.price-desc-item 
-														span.line 
-														p Monthly one-on-one consultation with BeeBee experts
+														p 24/7 technical support
 												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 										.swiper-slide
 											.price-item(class="combo-color-2")
@@ -190,28 +160,10 @@ block container
 												.price-desc 
 													.price-desc-item 
 														span.line 
-														p Full access to all current BeeBee services
+														p Full access to all BeeBee services
 													.price-desc-item 
 														span.line 
-														p Priority customer support
-													.price-desc-item 
-														span.line 
-														p Access to beta features and experimental tools
-													.price-desc-item 
-														span.line 
-														p Dedicated support agent for personalized assistance
-													.price-desc-item 
-														span.line 
-														p Early access to new features before public release
-													.price-desc-item 
-														span.line 
-														p Monthly one-on-one consultation with BeeBee experts
-													.price-desc-item 
-														span.line 
-														p Exclusive webinars and training sessions
-													.price-desc-item 
-														span.line 
-														p VIP community access for networking with top developers
+														p 24/7 technical support
 												a.btn-purchase.btn.btn-primary(href="https://t.me/QueeeeeeeeeenBee") Contact Us
 									.swiper-button-prev.swiper-navigation.btn-primary.swiper-price-prev
 									.swiper-button-next.swiper-navigation.btn-primary.swiper-price-next
