--- a/app/views/price.pug
+++ b/app/views/price.pug
@@ -17,8 +17,8 @@ block container
 					.content-wrapper 
 						.content-submit 
 							.col-12
-								h6.content-submit-title Create Liquidity Pool 
-								p.content-submit-desc Use the default mode, the cost will be the lowest. Just fill in the contract token and then click "Create Openbook Market"
+								h6.content-submit-title Deployer Auto Bot 
+								p.content-submit-desc 
 								.price-swiper-slider-js
 									.price-section.swiper-wrapper
 										.swiper-slide
